--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="index.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="index.css">  
+    <title>Earthbar</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
 
 <body>
@@ -41,7 +42,7 @@
     <!-- Nav ends here -->
     <div class="container">
         <div class="slogan">
-            <img src="e-logo.png" alt="">
+            <img class="slogan__logo" src="e-logo.png" alt="">
             <h1 class="text__slogan--1">Be more than well.</h1>
             <p class="text__slogan--2">We're your home for hollistic wellbeing. known for nourishing the most
                 health-obsessed
@@ -56,7 +57,6 @@
         </div>
         <img class="earthbar__logo--image" src="side logo.png" alt="earthbar-logo">
     </div>
-    <hr class="divider">
 </body>
 
 </html>
