--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </p>
         </div>
         <div class="nav-container">
-            <div class="nav-1">
+            <div class="nav">
                 <img class="company-logo" src="earthbar.png" alt="earthbar-logo">
                 <ul class="nav__item nav__item--1">
                     <li>Shop</li>
@@ -29,7 +29,7 @@
                     <li>Careers</li>
                 </ul>
             </div>
-            <div class="nav-2">
+            <div class="nav">
                 <ul class="nav__item nav__item--2">
                     <li>Locations</li>
                     <li>Order Ahead</li>
