changed classes name/ fixed indentation

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
         <div class="navbar__menu navbar-menu" id="nav-links">
             <ul class="navbar__list navbar-start">
                 <li class="navbar__item navbar-item"><a class="navbar__item--dark" href="">Shop</a></li>
-                <li class="navbar-item"><a class="navbar__item--dark" href="">About Us</a></li>
-                <li class="navbar-item"><a class="navbar__item--dark" href="">Careers</a></li>
+                <li class="navbar__item navbar-item"><a class="navbar__item--dark" href="">About Us</a></li>
+                <li class="navbar__item navbar-item"><a class="navbar__item--dark" href="">Careers</a></li>
             </ul>
             <ul class="navbar__list navbar-end">
                 <li class="navbar__item navbar-item"><a class="navbar__item--dark" href="">Locations</a></li>
                 <li class="navbar__item navbar-item"><a class="navbar__item--dark" href="">Order Ahead</a></li>
-                <li class=" navbar__item navbar-item"><a href=""><i class="fa-solid fa-bag-shopping" style="color: #0a0a0a;"></i></a>
+                <li class="navbar__item navbar-item"><a href=""><i class="fa-solid fa-bag-shopping" style="color: #0a0a0a;"></i></a>
                 </li>
             </ul>
         </div>    
@@ -50,9 +50,9 @@
         <div class="slogan">
             <img class="slogan__logo" src="e-logo.png" alt="earthbar__e-logo">
             <h1 class="slogan__heading">Be more than well.</h1>
-            <p class="slogan__paragraph">We're your home for hollistic wellbeing. known for nourishing the most
-                health-obsessed
-                people on the planet.
+            <p class="slogan__paragraph">
+                We're your home for hollistic wellbeing. known for nourishing the most
+                health-obsessed people on the planet.
             </p>
             <button class="slogan__button">Shop all products 
                 <span class="slogan__button--arrow">
