--- a/index.html
+++ b/index.html
@@ -14,18 +14,17 @@
 
 <body>
     <div class="promo-message">
-        <p class="promo-message__paragraph--italic is-italic">
+        <p class="promo-message__paragraph">
             Our NEW Core Daily Pack vitamins are now available.
             Foundational nutrition for less than $1 a day!
         </p>
     </div>
-    <nav class="navbar has-shadow is-white" role="navigation" aria-label="main navigation">
+    <nav class="navbar">
         <div class="navbar__container navbar-brand">
             <a class="navbar__item navbar-item" href="">
                 <img class="navbar__image" src="earthbar.png" alt="earthbar-logo">
             </a>
-            <a role="button" class="navbar-burger navbar__button--burger" id="burger" aria-label="menu" aria-expanded="false"
-                data-target="navbarBasicExample">
+            <a class="navbar-burger navbar__button-burger" id="burger">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -33,29 +32,31 @@
         </div>
         <div class="navbar__menu navbar-menu" id="nav-links">
             <ul class="navbar__list navbar-start">
-                <li class="navbar__item navbar-item"><a class="navbar__item--dark" href="">Shop</a></li>
-                <li class="navbar__item navbar-item"><a class="navbar__item--dark" href="">About Us</a></li>
-                <li class="navbar__item navbar-item"><a class="navbar__item--dark" href="">Careers</a></li>
+                <li class="navbar__item navbar-item"><a class="navbar__link" href="">Shop</a></li>
+                <li class="navbar__item navbar-item"><a class="navbar__link" href="">About Us</a></li>
+                <li class="navbar__item navbar-item"><a class="navbar__link" href="">Careers</a></li>
             </ul>
             <ul class="navbar__list navbar-end">
-                <li class="navbar__item navbar-item"><a class="navbar__item--dark" href="">Locations</a></li>
-                <li class="navbar__item navbar-item"><a class="navbar__item--dark" href="">Order Ahead</a></li>
+                <li class="navbar__item navbar-item"><a class="navbar__link" href="">Locations</a></li>
+                <li class="navbar__item navbar-item"><a class="navbar__link" href="">Order Ahead</a></li>
                 <li class="navbar__item navbar-item"><a href=""><i class="fa-solid fa-bag-shopping" style="color: #0a0a0a;"></i></a>
                 </li>
             </ul>
         </div>    
     </nav>
+    <br>
     <!-- Nav ends here -->
+    <!-- first section -->
     <div class="container">
         <div class="slogan">
             <img class="slogan__logo" src="e-logo.png" alt="earthbar__e-logo">
-            <h1 class="slogan__heading">Be more than well.</h1>
+            <h1 class="slogan__heading--larger">Be more than well.</h1>
             <p class="slogan__paragraph">
                 We're your home for hollistic wellbeing. known for nourishing the most
                 health-obsessed people on the planet.
             </p>
             <button class="slogan__button">Shop all products 
-                <span class="slogan__button--arrow">
+                <span class="slogan__button-arrow">
                 <i class="fa-solid fa-arrow-right" style="color: #ffffff;"></i>
                 </span>
             </button>
@@ -66,6 +67,16 @@
                 alt="poduct-image">
         </div>
         <img class="earthbar__image" src="side logo.png" alt="earthbar-logo">
+    </div>
+    <hr class="divider">
+    <!-- second section -->
+    <div class="container">
+        <div class="slogan__container">
+            <h1 class="slogan__heading">Unearth your potential.</h1>
+            <p class="slogan__paragraph">We bought health down to earth with products that work wonders. 
+                Shop our highly curated selection of the best in wellness.
+            </p>
+        </div>
     </div>
     <script src="index.js"></script>
 </body>
